extensions/source/dbpilots/optiongrouplayouter.cxx
@@ -148,8 +148,15 @@ namespace dbp
             xRadioShape->setControl(Reference< XControlModel >(xRadioModel, UNO_QUERY));
 
             // the name of the shape
-            if (xShapeProperties.is())
-                xShapeProperties->setPropertyValue("Name", makeAny(sElementsName));
+            // tdf#117282 com.sun.star.drawing.ControlShape *has* no property
+            // of type 'Name'. In older versions it was an error that this did
+            // not throw an UnknownPropertyException. Still, it was never set
+            // at the Shape/SdrObject and was lost.
+            // Thus - just do no tset it. It is/stays part of the FormControl
+            // data, so it will be shown in the FormControl dialogs. It is not
+            // shown/used in SdrObject::Name dialog (e.g. context menu/Name...)
+            // if (xShapeProperties.is())
+            //     xShapeProperties->setPropertyValue("Name", makeAny(sElementsName));
 
             // add to the page
             xPageShapes->add(xRadioShape.get());
